@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-17T08:23:41Z",
+  "timestamp" : "2024-05-17T16:23:22Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 761,
-  "uniques" : 376,
+  "count" : 762,
+  "uniques" : 377,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -79,12 +79,12 @@
     },
     {
       "timestamp": "2024-05-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
