@@ -1,3 +1,12 @@
+2024-05-17T16:23:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9131284475 # 281
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-17
+* notice: last 14d: unq all: 6 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 376 761
+* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 377 762
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-05-17]
+
 2024-05-17T08:23:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9125223962 # 280
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-17
